fix layout issues orientation portrait and desktop

--- a/src/Components/HomeComponent/styles.scss
+++ b/src/Components/HomeComponent/styles.scss
@@ -6,20 +6,21 @@
 .HomeComponentContainer {
   &-IntroductionAndPitchContainer {
     background-color: $main-darkblue;
-    height: 100vh;
     background-image: url('../../assets/img/home_background_mobile.webp');
     background-repeat: no-repeat;
     background-position: left 0 bottom 0;
     background-size: contain;
-    &-MainTitle {
-      color: $main-white;
-      white-space: pre-line;
-    }
-    &-Pitch {
-      color: $main-white;
-    }
-    &-DownloadButton {
-      @include pale-green-button;
+    &-TextAndButtonContainer {
+      &-MainTitle {
+        color: $main-white;
+        white-space: pre-line;
+      }
+      &-Pitch {
+        color: $main-white;
+      }
+      &-DownloadButton {
+        @include pale-green-button;
+      }
     }
   }
 }
@@ -29,15 +30,22 @@
 @media (max-width: $mobile-max-width) {
   .HomeComponentContainer {
     &-IntroductionAndPitchContainer {
+      height: 100vh;
       background-image: url('../../assets/img/home_background_mobile.webp');
-      padding-top: 9vh;
-      padding-left: 40px;
-      padding-right: 40px;
-      &-MainTitle {
-        font: $mobile-h1;
-      }
-      &-Pitch {
-        font: $mobile-pitch-font;
+      background-position: left 0 bottom -50px;
+      padding-top: 50px;
+
+      &-TextAndButtonContainer {
+        margin-top: 5vh;
+        margin-left: 40px;
+        margin-right: 40px;
+
+        &-MainTitle {
+          font: $mobile-h1;
+        }
+        &-Pitch {
+          font: $mobile-pitch-font;
+        }
       }
     }
   }
@@ -47,10 +55,12 @@
 @media (max-width: $mobile-max-width) and (min-height: $shortmobile-max-height) {
   .HomeComponentContainer {
     &-IntroductionAndPitchContainer {
-      padding-top: 15vh;
+      padding-top: 13vh;
 
-      &-DownloadButton {
-        margin-top: 1em;
+      &-TextAndButtonContainer {
+        &-DownloadButton {
+          margin-top: 1em;
+        }
       }
     }
   }
@@ -60,18 +70,39 @@
 @media (min-width: 768px) {
   .HomeComponentContainer {
     &-IntroductionAndPitchContainer {
+      z-index: -1;
+      position: relative;
+      margin-left: 50px;
+      height: 100vh;
       background-image: url('../../assets/img/home_background_tablet.webp');
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding: 70% 5% 5% 52%;
 
-      &-MainTitle {
-        font: $tablet-h1;
+      &-TextAndButtonContainer {
+        position: absolute;
+        bottom: 20%;
+        right: 20px;
+        width: 46%;
+        &-MainTitle {
+          font: $tablet-h1;
+          margin-bottom: 25px;
+        }
+        &-Pitch {
+          font: $tablet-pitch-font;
+          margin-bottom: 25px;
+        }
       }
-      &-Pitch {
-        font: $tablet-pitch-font;
-      }
+    }
+  }
+}
+
+/* ---------------------------  Tablet --------------------------- */
+@media (min-width: 768px) and (orientation: portrait) {
+  .HomeComponentContainer {
+    &-IntroductionAndPitchContainer {
+      margin-left: 50px;
+      height: 50vh;
     }
   }
 }
